* Style Improvements? * Changed some naming stuff. Banner is now called banner, more detail popup is called overlay. * Added tilechooser (option to turn it on and off, and additional tiles - sat,cloudmade) * Toned down animation (fade only on initial load, and overlay fade which works) * Added option to turn off google map tiles animation * Fixed (and tested!) sizing of overlay. Works in Firefox>3.5/Chrome/Safari/MobileSafari * Some additional options for iphone/ipad * Started skeleton for push down dialog * Overlay now has dimmed screen behind it. * Improved banner, sketched social links (twitter etc.) in banner - not much functionality yet * Integrated overlay with tour more tightly (overlay nexts trigger next tour location, etc.) * Set videos to autoplay (debatable) * Skelton for branding watermark. * Added subtle tour progress indicator to tour controls * Minor bug fixing
git-svn-id: https://sourcemap.codebasehq.com/sourcemap/smap.svn/trunk@390 ab0f7204-c6de-4229-9497-6c0baa3b4d53

--- a/www/sites/default/assets/styles/sourcemap.less
+++ b/www/sites/default/assets/styles/sourcemap.less
@@ -5,6 +5,7 @@
 @highlight-color: #C9FF23;
 @background: #f4f4f4;
 @heading-color: #3274d0;
+@embed-color: rgba(30,30,30,0.6);
 
 /* Style Functions */
 .brand_gradient {
@@ -22,7 +23,17 @@
     background:-webkit-gradient(radial, center center, 0, center center, 400, from(#444), to(#000));
     background:-moz-radial-gradient(center 45deg, circle cover, #444 0%, #000 100%);    
 }
-
+.light_gradient {
+    background:#eee;
+    background:-webkit-gradient(radial, center center, 0, center center, 400, from(#eee), to(#ccc));
+    background:-moz-radial-gradient(center 45deg, circle cover, #eee 0%, #ccc 100%);    
+}
+.transparent_gradient {
+    background:#000;
+    background:rgba(30,30,30,0.6);
+    background:-webkit-gradient(radial, center center, 0, center center, 400, from(rgba(30,30,30,0.3)), to(rgba(30,30,30,0.6)));
+    background:-moz-radial-gradient(center 45deg, circle cover, rgba(30,30,30,0.3) 0%, rgba(30,30,30,0.6) 100%);    
+}
 .rounded(@radius: 4px) {
     -webkit-border-radius: @radius;
     -moz-border-radius: @radius;
